1. Collection API Улучшения [#239728]