@@ -38,7 +38,7 @@ public class DepDescCompTest {
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
 
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K1",
                 "K1/SK1",
                 "K1/SK1/SSK1",
@@ -65,7 +65,7 @@ public class DepDescCompTest {
                 "K2/SK1/SSK1",
                 "K2/SK1/SSK2");
 
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "K2",
                 "K2/SK1",
                 "K2/SK1/SSK1",
